# cfsh

./: Cargo.toml  README.md  example.json  example.ron  example.yaml
src/: logger.rs  main.rs  shell.rs
src/config/: alias.rs  condition.rs  envar.rs  error.rs  mod.rs
